# baixar_social_media

./: .gitignore  main.py  pyproject.toml
app/core/: config.py  logger.py
app/routes/: download.py
app/schemas/: download.py
app/services/: downloader.py
templates/: index.html
