[project]
name = "baixar-social-media"
version = "0.1.0"
description = "Servidor local para baixar vídeos de redes sociais via yt-dlp."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2024.1.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
baixar-social-media = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
artifacts = ["main.py"]
